# craft

./: .travis.yml  Cargo.toml  LICENSE  README.md
gekraftet_client/: Cargo.toml  README.md
gekraftet_client/src/: camera.rs  main.rs
gekraftet_client/src/mesh/: builder.rs  faces.rs  vertex.rs
gekraftet_client/src/renderer/: mod.rs  uniform.rs
gekraftet_client/src/renderer/shaders/: fs.glsl  vs.glsl
gekraftet_client/src/world/: mod.rs
gekraftet_client/src/world/mesher/: basic_face.rs  greedy_cube.rs  mod.rs
gekraftet_core/: Cargo.toml  README.md
gekraftet_core/src/: lib.rs  main.rs  nbt.rs
gekraftet_core/src/maths/: angle.rs  matrix.rs  mod.rs  vector.rs
gekraftet_core/src/maths/x86/: matrix_simd.rs
gekraftet_core/src/mesh/: faces.rs  vertex.rs
gekraftet_core/src/renderer/: mod.rs
gekraftet_core/src/utils/: mod.rs  random.rs  unsafety.rs
gekraftet_core/src/world/: block.rs  chunk.rs  mod.rs  position.rs
gekraftet_core/src/world/mesher/: mod.rs
gekraftet_core/src/world/noise/: generator.rs  mod.rs  perlin2d.rs  perlin3d.rs  sine.rs
gekraftet_server/: Cargo.toml  README.md
gekraftet_server/src/: config.rs  main.rs  packet.rs
gekraftet_server/src/packet/: data.rs  id.rs  metadata.rs  mod.rs  receiver.rs  sender.rs  utils.rs
gekraftet_server/src/world/: region.rs
src/: camera.rs  input.rs  main.rs  utils.rs  windowing.rs
src/mesh/: builder.rs  mod.rs  texture.rs
src/renderer/: errors.rs  shader.rs  uniform.rs
src/utils/: math.rs  mod.rs  unsafety.rs
src/world/: block.rs  chunk.rs  mod.rs  position.rs
src/world/noise/: mod.rs  (+6 more)
(+4 files in other folders)
