[package]
name = "craft"
version = "0.1.0"
authors = ["Hoe Hao Cheng <haochengho12907@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#cgmath = "0.17.0"
arrayvec = "0.5.1"
glutin = "0.24.0"
gl = "0.14.0"
rand = "0.7.3"
rand_distr = "0.2.2"
rand_pcg = "0.2.1"