[package]
name = "gekraftet_client"
version = "0.1.0"
authors = ["Hoe Hao Cheng <haochengho12907@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.24.0"
gl = "0.14.0"

[dependencies.gekraftet_core]
path = "../gekraftet_core"
