[package]
name = "gekraftet_server"
version = "0.1.0"
authors = ["Hoe Hao Cheng <haochengho12907@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
version = "0.2.20"
features = ["full"]

[dependencies.gekraftet_core]
path = "../gekraftet_core"
